[package]
name = "rtracker"
version = "0.8.0"
authors = ["Justin Noah <justinnoah@gmail.com>"]
license = "APGL-3.0-only"
keywords = ["bittorrent", "torrent", "tracker"]
categories = ["command-line-utilities"]

[dependencies]
bincode         = "1.2"
chrono          = "0.4"
docopt          = "1.1"
env_logger      = "0.6"
log             = "0.4"
r2d2            = "0.8"
r2d2_sqlite     = "0.14"
rand            = "0.7"
rust-ini        = "0.14"
serde           = "1.0"
serde_derive    = "1.0"

[dependencies.rusqlite]
version = "0.21"
features = ["bundled"]

[[bin]]
name = "rtracker"
path = "src/main.rs"

[badges]
travis-ci = { repository = "justinnoah/rtracker" }
appveyor = { repository = "justinnoah/rtracker" }
