[package]
name = "rtracker"
version = "0.8.1"
authors = ["Justin Noah <justinnoah@gmail.com>"]
license = "APGL-3.0-only"
keywords = ["bittorrent", "torrent", "tracker"]
categories = ["command-line-utilities"]

[dependencies]
bincode         = "1.3"
chrono          = "0.4"
docopt          = "1.1"
env_logger      = "0.9"
log             = "0.4"
r2d2            = "0.8"
r2d2_sqlite     = "0.19"
rand            = "0.8"
rust-ini        = "0.17"
serde           = "1.0"
serde_derive    = "1.0"

[dependencies.rusqlite]
version = "0.26"
features = ["bundled"]

[[bin]]
name = "rtracker"
path = "src/main.rs"

[badges]
travis-ci = { repository = "justinnoah/rtracker" }
appveyor = { repository = "justinnoah/rtracker" }
